<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/name_create"
                    android:layout_weight="0.6"
                    android:textColor="@color/grey"
                    android:textSize="25sp">
                </TextView>

                <EditText
                    android:id="@+id/title"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_maj"
                    android:inputType="text"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:background="@android:color/transparent"
                    android:textAlignment="center"/>

            </TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/description_create"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:layout_width="match_parent">
            </TextView>

            <EditText
                android:id="@+id/description"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"
                android:textAlignment="center"/>

            <DatePicker
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:endYear="2100"
                android:startYear="2020"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginTop="20dp">
            </DatePicker>

            <TimePicker
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_marginTop="1dp">
            </TimePicker>

            <TextView
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/address_create"
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:layout_width="match_parent">
            </TextView>

            <FrameLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ch.epfl.sdp.ui.createevent.DelayAutoCompleteTextView
                    android:id="@+id/geo_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapSentences"
                    android:background="@color/white"
                    android:hint="@string/address"
                    android:padding="10dp"
                    android:dropDownWidth="fill_parent"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    />

                <ImageView
                    android:id="@+id/geo_autocomplete_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_remove"
                    android:contentDescription="@string/delete_button"
                    android:layout_gravity="center_vertical|end"
                    android:visibility="gone"
                    android:layout_marginEnd="12dp"/>

            </FrameLayout>

            <TextView
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Categories: "
                android:textColor="@color/grey"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:layout_width="match_parent">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/IndoorToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:gravity="center"
                    android:textOff="Indoor"
                    android:textOn="Indoor"/>

                <ToggleButton
                    android:id="@+id/OutdoorToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:gravity="center"
                    android:textOff="Outdoor"
                    android:textOn="Outdoor"/>

                <ToggleButton
                    android:id="@+id/SportToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:gravity="center"
                    android:textOff="Sport"
                    android:textOn="Sport"/>

                <ToggleButton
                    android:id="@+id/PartyToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:gravity="center"
                    android:textOff="Party"
                    android:textOn="Party"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/add_image"
                android:layout_marginTop="20dp"
                android:background="@color/grey"
                android:scaleType="centerCrop">
            </ImageView>

            <Button
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="80dp"
                android:text="@string/plus"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dp"
                android:src="@drawable/check"
                app:layout_anchorGravity="bottom|center" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>